--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
-    <meta name="author" content="Chao Xu">
+    <meta name="author" content="Rui Wang">
     <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Posts">
     <meta property="og:type" content="article">
