--- a/blog.html
+++ b/blog.html
@@ -48,8 +48,8 @@
         <h1 id="article-title">Posts</h1>
         <table class="postindex">
 <tbody><tr>
-    <td><a href="/posts/2020-04-10-maximize-cash-back.html"><cite>Maximize Cash Back</cite></a></td>
-    <td class="right"><time>2020-04-10</time></td>
+    <td><a href="/posts/2020-04-15-Week.html"><cite>Week</cite></a></td>
+    <td class="right"><time>2020-04-15</time></td>
 </tr>
 <tr>
     <td><a href="/posts/2019-11-27-bounds-on-cuts.html"><cite>Bounds on number of cuts</cite></a></td>
