--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,8 @@
       <article>
         <h1 id="article-title">Posts</h1>
         <table class="postindex">
-<tbody><tr>
+<tbody>
+<tr>
     <td><a href="/posts/2020-04-15-Week.html"><cite>Week</cite></a></td>
     <td class="right"><time>2020-04-15</time></td>
 </tr>
@@ -55,14 +56,7 @@
     <td><a href="/posts/2019-11-27-bounds-on-cuts.html"><cite>Bounds on number of cuts</cite></a></td>
     <td class="right"><time>2019-11-27</time></td>
 </tr>
-<tr>
-    <td><a href="/posts/2019-09-19-word-break-with-cost.html"><cite>Word break with cost</cite></a></td>
-    <td class="right"><time>2019-09-19</time></td>
-</tr>
-<tr>
-    <td><a href="/posts/2019-09-06-traditional-ira-vs-roth-ira.html"><cite>Traditional vs Roth IRA under fixed amount of investment</cite></a></td>
-    <td class="right"><time>2019-09-06</time></td>
-</tr>
+
 
 </tbody></table> 
 
