--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="row">
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
-    <img width="270" height="270" src="https://chaoxuprime.com/files/chao/chaoxu_current.jpg" style="border-radius:50%;max-width:95%" title="Lord Chao of the House Xu, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="270" height="270" src="https://raw.githubusercontent.com/biowr/biowr.github.io/master/files/chao/logo.png" style="border-radius:50%;max-width:95%" title="Lord Chao of the House Xu, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     <p>
