--- a/index.html
+++ b/index.html
@@ -54,17 +54,6 @@ var _hmt = _hmt || [];
     }}});
   </script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163975758-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-163975758-1');
-</script>
-
-
   
   
   <script>
@@ -92,10 +81,10 @@ var _hmt = _hmt || [];
 <div class="container">
 <div class="person" itemscope="" itemtype="http://schema.org/Person">
     <meta itemprop="gender" content="Male">
-    <meta itemprop="birthDate" content="September 12, 1989">
+    <meta itemprop="birthDate" content="September 15, 1996">
     <meta itemprop="honorificPrefix" content="Dr">
     <meta itemprop="honorificSuffix" content="PhD">
-    <meta itemprop="url" content="https://chaoxuprime.com">
+    <meta itemprop="url" content="https://biowr.github.io">
 <div class="row" style="display:block"><h1 id="site-title"><span itemprop="givenName">Rui</span> <span itemprop="familyName">Wang</span> <wbr>|<wbr> <ruby>
 <rb>王</rb><rp>(</rp><rt>wáng</rt><rp>)</rp></ruby>
 <ruby><rb>睿</rb><rp>(</rp><rt>ruì</rt><rp>)</rp></ruby>
@@ -103,7 +92,7 @@ var _hmt = _hmt || [];
 <div class="row">
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
-    <img width="270" height="270" src="https://raw.githubusercontent.com/biowr/biowr.github.io/master/files/chao/logo.png" style="border-radius:50%;max-width:95%" title="Lord Chao of the House Xu, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="270" height="270" src="https://raw.githubusercontent.com/biowr/biowr.github.io/master/files/chao/DNA.svg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     <p>
@@ -123,7 +112,7 @@ var _hmt = _hmt || [];
      in 2013, and spent Spring 2012 in <a href="https://www.budapestsemesters.com/">Budapest Semesters in Mathematics</a>.
     </p>
     <p>I maintain a <a href="https://github.com/chaoxu/">github account</a> and a <a href="blog.html"><strong>blog</strong></a>. I frequent <a href="http://cstheory.stackexchange.com/users/314/chao-xu">cstheory</a>.</p>
-    <p>You can contact me through email <a href="mailto:the.chao.xu@gmail.com"><samp itemprop="email">the.chao.xu@gmail.com</samp></a>.</p>
+    <p>You can contact me through email <a href="mailto:wangrui.whale@gmail.com"><samp itemprop="email">the.chao.xu@gmail.com</samp></a>.</p>
   </div>
 </div>
 </div>
