--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <img width="270" height="270" src="https://raw.githubusercontent.com/biowr/biowr.github.io/master/files/chao/DNA.svg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="270" height="270" src="https://raw.githubusercontent.com/biowr/biowr.github.io/master/files/chao/logo2.png" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     <p>
