--- a/index.html
+++ b/index.html
@@ -102,18 +102,11 @@ var _hmt = _hmt || [];
       Here is my <a href="files/cv.pdf">CV</a>(last updated May 2019) and <a href="files/research_statement.pdf">old research statement</a>.
     </p>
     <p>
-      I was a <span itemprop="jobTitle">software engineer</span> at <span itemprop="worksFor" itemscope itemtype="http://schema.org/Corporation"><span itemprop="name">Grab</span></span> in Seattle, and was a <span itemprop="jobTitle">research scientist</span> at 
-        <span itemprop="worksFor" itemscope itemtype="http://schema.org/Corporation"><span itemprop="name">Yahoo! Research</span></span> in New York.
+      Every day I remind myself that my inner and outer life are based on the labors of other men, living and dead, and that I must exert myself in order to give in the same measure as I have received and am still receiving.
+
+― Albert Einstein, The World As I See It
+    
     </p>
-    <p>I obtained my PhD in Computer Science from 
-      <span itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization"><a itemprop="name" href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a></span>
-    in May 2018. My advisors were <a href="http://karthik.ise.illinois.edu/">Karthik Chandrasekaran</a> and <a href="http://chekuri.cs.illinois.edu/">Chandra Chekuri</a>.
-    I finished my undergrad in mathematics at 
-    <span itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization"><a itemprop="name" href="https://www.stonybrook.edu/">Stony Brook University</a></span>
-     in 2013, and spent Spring 2012 in <a href="https://www.budapestsemesters.com/">Budapest Semesters in Mathematics</a>.
-    </p>
-    <p>I maintain a <a href="https://github.com/chaoxu/">github account</a> and a <a href="blog.html"><strong>blog</strong></a>. I frequent <a href="http://cstheory.stackexchange.com/users/314/chao-xu">cstheory</a>.</p>
-    <p>You can contact me through email <a href="mailto:wangrui.whale@gmail.com"><samp itemprop="email">the.chao.xu@gmail.com</samp></a>.</p>
   </div>
 </div>
 </div>
