--- a/index.html
+++ b/index.html
@@ -97,16 +97,14 @@ var _hmt = _hmt || [];
   </div>
   <div class="intro-right">
     <p>
-      I'm a Software Engineer at <a href="https://voleon.com/">Voleon</a>.
-      My research interests are <span itemprop="knowsAbout">algorithms</span>, <span itemprop="knowsAbout">combinatorial optimization</span> and <span itemprop="knowsAbout">computational geometry</span>. I'm also interested in more applied problems with nice theoretical components. 
-      Here is my <a href="files/cv.pdf">CV</a>(last updated May 2019) and <a href="files/research_statement.pdf">old research statement</a>.
+     
     </p>
     <p>
       Every day I remind myself that my inner and outer life are based on the labors of other men, living and dead, and that I must exert myself in order to give in the same measure as I have received and am still receiving.
-
-― Albert Einstein, The World As I See It
+       </p>
     
-    </p>
+<p align="right">― Albert Einstein, The World As I See It</p>，
+   
   </div>
 </div>
 </div>
