--- a/404.html
+++ b/404.html
@@ -63,6 +63,8 @@ var _hmt = _hmt || [];
       <article>
         <h1 id="article-title">404</h1>
         <p>The page is not found.</p>
+            <img src="/pic/404.png" alt="404.png" title="404.png" />
+            
       </article>
     </main>
     <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://rickywang.baklib.com" rel="author">Rui Wang</a>. Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
