--- a/pages/404.html
+++ b/pages/404.html
@@ -33,6 +33,7 @@
         <li><a href="/blog.html">Blog</a></li>
         <li><a href="/files/cv.pdf">CV</a></li>
         <li><a href="/tools.html">Tools</a></li>
+        <li><a href="/pages/24fps.html">24 FPS</a></li>
       </ul>
     </nav>
     <main>
