--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <img width="270" height="270" src="/pic/logo.jpg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="270" height="270" src="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge2bosds5hj30u00ukta5.jpg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     
