--- a/pages/tools.html
+++ b/pages/tools.html
@@ -32,7 +32,7 @@
         <li><a href="/">About</a></li>
         <li><a href="/blog.html">Blog</a></li>
         <li><a href="/files/cv.pdf">CV</a></li>
-        <li><a href="/tools.html">Tools</a></li>
+        <li><a href="/pages/tools.html">Tools</a></li>
           <li><a href="/pages/24fps.html">24 FPS</a></li>
       </ul>
     </nav>
