--- a/tools.html
+++ b/tools.html
@@ -109,6 +109,9 @@ var _hmt = _hmt || [];
 	 <p> </p>
 <p><a href='https://rickywang.lanzous.com/ibr0wuf'>Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>MIN</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>With Docker</a></p>
 
+	<h3>VPN</h3>
+	  <p> </p>
+<p>ClashX <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> </p>
    <p> </p>
     
 
