--- a/tools.html
+++ b/tools.html
@@ -87,14 +87,14 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://rickywang.lanzous.com/ibr5j9g'>7-Zip</a> </p>
 	
-<p><a href='https://freefilesync.org/'>FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb'>WIN</a> <a href='https://rickywang.lanzous.com/ibr5v0j'>MAC</a></p>
+<p><a href='https://freefilesync.org/'>FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb'>Win</a> <a href='https://rickywang.lanzous.com/ibr5v0j'>Mac</a></p>
 
 <h3>Research software</h3>
 	<p> </p>
-<p><a href='https://github.com/leovan/SciHubEVA/releases'>ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg'>WIN</a> <a href='https://rickywang.lanzous.com/ibr6kcb'>MAC</a></p>
+<p><a href='https://github.com/leovan/SciHubEVA/releases'>ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg'>Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb'>Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/'>Eudic</a> </p>
-<p>Endnote X9.3.2   <a href='https://share.weiyun.com/5wLRytn'>WIN</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>MAC</a></p>
-<p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>MAC</a></p>
+<p>Endnote X9.3.2   <a href='https://share.weiyun.com/5wLRytn'>Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>Mac</a></p>
+<p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a></p>
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>WIN32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>WIN64</a></p>
 
 <h3>Professional software</h3>
@@ -113,7 +113,8 @@ var _hmt = _hmt || [];
 	  <p> </p>
 <p>ClashX <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> </p>
    <p> </p>
-    
+ 
+	<h4>This service uses LanZou Cloud, not Baidu Cloud , unlimited speed download</h4>
 
           </div>
 <div class="hide-on-print">
