--- a/tools.html
+++ b/tools.html
@@ -4,12 +4,12 @@
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
  <!--作者-->
-    <meta property="og:title" content="How to probe a western blot">
+    <meta property="og:title" content="Tools">
  <!--页面标题-->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="math, life">
-    <title>How to probe a western blot</title> 
+    <title>Tools</title> 
  <!--页面标题-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
