--- a/tools.html
+++ b/tools.html
@@ -83,6 +83,8 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a></p>
 	
+<p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Min</a></p>
+	
 <p><a href='https://www.foxitsoftware.cn/'>Foxit PDE Reader</a></p>
 	
 <p><a href='https://rickywang.lanzous.com/ibr5j9g'>7-Zip</a> </p>
@@ -111,7 +113,7 @@ var _hmt = _hmt || [];
 
 	<h3>VPN</h3>
 	  <p> </p>
-<p>ClashX <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> </p>
+<p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> </p>
    <p> </p>
  
 	<h4>This service uses LanZou Cloud, not Baidu Cloud , unlimited speed download</h4>
