--- a/tools.html
+++ b/tools.html
@@ -83,7 +83,7 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a></p>
 	
-<p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Min</a></p>
+<p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Lite</a></p>
 	
 <p><a href='https://www.foxitsoftware.cn/'>Foxit PDE Reader</a></p>
 	
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
 <p><a href='http://www.eudic.net/v4/en/app/eudic/'>Eudic</a> </p>
 <p>Endnote X9.3.2   <a href='https://share.weiyun.com/5wLRytn'>Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>Mac</a></p>
 <p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a></p>
-<p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>WIN32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>WIN64</a></p>
+<p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>Win64</a></p>
 
 <h3>Professional software</h3>
 	
@@ -109,12 +109,12 @@ var _hmt = _hmt || [];
 <h3>OpenWRT</h3>
 	
 	 <p> </p>
-<p><a href='https://rickywang.lanzous.com/ibr0wuf'>Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>MIN</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>With Docker</a></p>
+<p><a href='https://rickywang.lanzous.com/ibr0wuf'>Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>With Docker</a></p>
 
 	<h3>VPN</h3>
 	  <p> </p>
-<p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> </p>
-   <p> </p>
+<p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> <a href='https://vpn.wzjwzj.xyz/#/login'>Login</a></p>
+   <p> </p>  
  
 	<h4>This service uses LanZou Cloud, not Baidu Cloud , unlimited speed download</h4>
 
