--- a/tools.html
+++ b/tools.html
@@ -81,11 +81,11 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://office.qq.com/'>TIM</a></p>
 	
-<p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a></p>
+<p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a></p> <p><a href='https://rickywang.lanzous.com/ibsvuch'>2016</a></p> 
 	
 <p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Lite</a></p>
 	
-<p><a href='https://www.foxitsoftware.cn/'>Foxit PDE Reader</a></p>
+<p><a href='https://www.foxitsoftware.cn/'>Foxit PDE Reader</a></p> 
 	
 <p><a href='https://rickywang.lanzous.com/ibr5j9g'>7-Zip</a> </p>
 	
