--- a/tools.html
+++ b/tools.html
@@ -78,10 +78,10 @@ var _hmt = _hmt || [];
 	<p> </p>
 	
 <p><a href='https://www.google.cn/chrome/'>Google Chrome</a></p>
-	
+	<p><a href='https://www.microsoft.com/zh-cn/edge/'>Microsoft Edge</a></p>
 <p><a href='https://office.qq.com/'>TIM</a></p>
 	
-<p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvuch'>2016</a></p> 
+<p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvzvg'>2016</a></p> 
 	
 <p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Lite</a></p>
 	
