--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="400" height="238" controls="controls">
+<video width="400" height="238" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge63dg791rj31ke0u0x6q.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=188056&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
   </object>
 </video>
