--- a/pages/tools.html
+++ b/pages/tools.html
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="/">About</a></li>
         <li><a href="/blog.html">Blog</a></li>
+          <li><a href="/posts/vlog.html">Vlog</a></li>
         <li><a href="/files/cv.pdf">CV</a></li>
         <li><a href="/pages/tools.html">Tools</a></li>
           <li><a href="/pages/24fps.html">24 FPS</a></li>
