--- a/vlog/vlog10.html
+++ b/vlog/vlog10.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7awhdbl4j31wo0u0u0y.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7awhdbl4j31wo0u0u0y.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=93359&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
