--- a/vlog/vlog11.html
+++ b/vlog/vlog11.html
@@ -122,7 +122,7 @@ var _hmt = _hmt || [];
 	</br>
 
  <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bbyyyc3j31h70u0b2a.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bbyyyc3j31h70u0b2a.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=166555&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
   </object>
 </video>
