--- a/vlog/vlog11.html
+++ b/vlog/vlog11.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b72rvmkj31ny0u0x6p.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b72rvmkj31ny0u0x6p.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102082&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
 	</br>
              
     <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b8hmtq8j31km0rqkjl.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b8hmtq8j31km0rqkjl.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102266&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
@@ -111,7 +111,7 @@ var _hmt = _hmt || [];
 	</br>
             
              <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bae1kalj31go0qqe81.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bae1kalj31go0qqe81.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102395&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
@@ -133,7 +133,7 @@ var _hmt = _hmt || [];
 	</br>
 
  <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bejz7a4j31xu0swe83.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bejz7a4j31xu0swe83.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=105852&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
@@ -146,7 +146,7 @@ var _hmt = _hmt || [];
 
 
 <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bggly09j31il0u07wi.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bggly09j31il0u07wi.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=170529&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
   </object>
 </video>
@@ -157,7 +157,7 @@ var _hmt = _hmt || [];
 	</br>
 
             <center>       
-<video width="399" height="224.438" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bis7frmj31lt0u0e81.jpg" controls="controls">
+<video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bis7frmj31lt0u0e81.jpg" controls="controls">
   <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=108612&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
