--- a/vlog/vlog11.html
+++ b/vlog/vlog11.html
@@ -147,7 +147,7 @@ var _hmt = _hmt || [];
 
 <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bggly09j31il0u07wi.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=170529&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=155537&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
   </object>
 </video>
 	  </center>   
