--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,8 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>   
-    
+   
+    <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278855095&web_id=1278855095"></script>
     
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
