--- a/tools.html
+++ b/tools.html
@@ -118,6 +118,7 @@ var _hmt = _hmt || [];
    <p> </p>  
  
 	<h4>This service uses LanZou Cloud, not Baidu Cloud , unlimited speed download</h4>
+	<h1>Password ：9757</h1>
 
           </div>
 <div class="hide-on-print">
