--- a/tools.html
+++ b/tools.html
@@ -99,12 +99,14 @@ var _hmt = _hmt || [];
 <p>Endnote X9.3.2   <a href='https://share.weiyun.com/5wLRytn'>Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>Mac</a></p>
 <p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a></p>
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>Win64</a></p>
-
+<p><a href='http://qr20.cn/C3Rcwa'>IBM SPSS Statistics 25.0/26.0</a> </p>
+<p><a href='http://qr20.cn/C3Rcwa'>MATLAB 19b</a> </p>
+	
 <h3>Professional software</h3>
 	
 	<p> </p>
 	
-	
+<p><a href='http://qr20.cn/BJ2gAu'>Adobe Inc.</a></p>	
 <p><a href='https://rickywang.lanzous.com/ibrb79a'>amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
