--- a/tools.html
+++ b/tools.html
@@ -116,8 +116,14 @@ var _hmt = _hmt || [];
 
 	<h3>VPN</h3>
 	  <p> </p>
-<p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> <a href='https://vpn.wzjwzj.xyz/#/login'>Login</a></p>
-   <p> </p>  
+<p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> <a href='https://vpn.bioricky.top'>Login</a></p>
+ 
+<p><a href='https://rickywang.lanzous.com/ic4vzxa'>V2rayNG.APK</a></p>	
+	
+	<p> </p>  
+	
+	
+	
  
 	<h4>This service uses LanZou Cloud, not Baidu Cloud , unlimited speed download</h4>
 	<h1>Password ：9757</h1>
