--- a/tools.html
+++ b/tools.html
@@ -100,7 +100,9 @@ var _hmt = _hmt || [];
 <p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a></p>
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>Win64</a></p>
 <p><a href='http://qr20.cn/C3Rcwa'>IBM SPSS Statistics 25.0/26.0</a> </p>
-<p><a href='http://qr20.cn/C3Rcwa'>MATLAB 19b</a> </p>
+<p><a href='http://qr20.cn/C3Rcwa'>MATLAB 19b</a> </p>	
+<p><a href='http://qr20.cn/CMWXwU'>OriginPro2020b</a> </p>
+	
 	
 <h3>Professional software</h3>
 	
