--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
     <!-- 首页头像 -->
-    <img width="240" height="240" src="http://rickywang.cn-sh2.ufileos.com/pic%2FDNA.svg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
+    <img width="220" height="220" src="https://gitee.com/biowr/pic/raw/master/uPic/pic_DNA.svg" style="border-radius:50%;max-width:95%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl"/>
   </div>
   <div class="intro-right">
     
