--- a/blog.html
+++ b/blog.html
@@ -96,7 +96,7 @@ var _hmt = _hmt || [];
 </tr>    
     
 <tr>
-    <td><a href="/posts/2020-04-17-bookmark.html"><cite>Bookmark</cite></a></td>
+    <td><a href="/posts/2020-04-17-bookmark"><cite>Bookmark</cite></a></td>
     <td class="right"><time>2020-04-17</time></td>
 </tr>    
     
