--- a/tools.html
+++ b/tools.html
@@ -108,7 +108,9 @@ var _hmt = _hmt || [];
 	
 	<p> </p>
 	
-<p><a href='http://qr20.cn/BJ2gAu'>Adobe Inc.</a></p>	
+<p>Adobe Acrobat DC 2019<a href='https://sourl.cn/8ahhHS'>win</a> <a href='https://sourl.cn/4ZZEGf'>mac</a> </p>
+<p>Adobe Photoshop 2020 SP<a href='https://sourl.cn/968qEW'>win</a> <a href='https://sourl.cn/p4fHhb'>mac</a> </p>
+<p>Adobe Adobe Illustrator 2020 SP<a href='https://sourl.cn/YQXbD3'>win</a> <a href='https://sourl.cn/2dRCBf'>mac</a> </p>
 <p><a href='https://rickywang.lanzous.com/ibrb79a'>amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
