--- a/tools.html
+++ b/tools.html
@@ -90,6 +90,8 @@ var _hmt = _hmt || [];
 	
 <p><a href='https://rickywang.lanzous.com/ibr5j9g'>7-Zip</a> </p>
 	
+<p><a href='https://sourl.cn/VvrRDf'>Internet Download Manager</a> </p>
+	
 <p><a href='https://freefilesync.org/'>FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb'>Win</a> <a href='https://rickywang.lanzous.com/ibr5v0j'>Mac</a></p>
 
 <h3>Research software</h3>
