--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@ var _hmt = _hmt || [];
     <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Posts">
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="The Art Gallery Guardian">
+    <meta property="og:site_name" content="Book of Travels">
     <meta property="article:tag" content="">
     <title>Posts</title>
 
