--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@ var _hmt = _hmt || [];
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Art Gallery Guardian">
+    <meta name="description" content="Book of Travels">
     <meta name="author" content="Rui Wang">
     <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Posts">
