--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
   <body>
     <header class="hide-on-print">
         <div id="site-title">
-            <a href="/blog.html">The Art Gallery Guardian</a>
+            <a href="/blog.html">Book of Travels</a>
         </div>
         <div style="display: none;">
           <img src="/files/chao/chao_thumb.jpg">
