--- a/vlog/vlog1.html
+++ b/vlog/vlog1.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge79phzwjij31uu0u01kz.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=72468&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/HZ7mes" type="video/mp4" />
   </object>
 </video>
 	  </center>   
