--- a/vlog/vlog001.html
+++ b/vlog/vlog001.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="95%" poster="https://i.loli.net/2020/04/27/VC6wJtfKv8ch1Yg.png" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=155538&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/bqSxAX" type="video/mp4" />
   </object>
 </video>
 	  </center>   
