--- a/vlog/vlog5.html
+++ b/vlog/vlog5.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%"  poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7a6smi7qj31ri0u0kjn.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=155739&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+  <source src="https://sourl.cn/YYLRgV" type="video/mp4" />
   </object>
 </video>
 	  </center>   
