--- a/vlog/vlog7.html
+++ b/vlog/vlog7.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7aenklhxj31r40u01kx.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=153036&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+  <source src="https://sourl.cn/S4XQgu" type="video/mp4" />
   </object>
 </video>
 	  </center>   
