--- a/vlog/vlog11.html
+++ b/vlog/vlog11.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b72rvmkj31ny0u0x6p.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102082&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/2YdrHU" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -101,7 +101,7 @@ var _hmt = _hmt || [];
              
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7b8hmtq8j31km0rqkjl.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102266&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/A2rVaf" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
             
              <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bae1kalj31go0qqe81.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=102395&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/KKLyf9" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
 
  <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bbyyyc3j31h70u0b2a.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=166555&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+  <source src="https://sourl.cn/XrzXM9" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -134,7 +134,7 @@ var _hmt = _hmt || [];
 
  <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bejz7a4j31xu0swe83.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=105852&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/77tKeX" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -147,7 +147,7 @@ var _hmt = _hmt || [];
 
 <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bggly09j31il0u07wi.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=155537&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/DBSnJ5" type="video/mp4" />
   </object>
 </video>
 	  </center>   
@@ -158,7 +158,7 @@ var _hmt = _hmt || [];
 
             <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bis7frmj31lt0u0e81.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=108612&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/Utq5mR" type="video/mp4" />
   </object>
 </video>
 	  </center>   
