--- a/vlog/vlog13.html
+++ b/vlog/vlog13.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bpkoai9j31qn0u0b2b.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=114103&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/XWhRqu" type="video/mp4" />
   </object>
 </video>
 	  </center>   
