--- a/vlog/vlog14.html
+++ b/vlog/vlog14.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7bvkgyjlj31n70u0e83.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=116093&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/5Ri99v" type="video/mp4" />
   </object>
 </video>
 	  </center>   
