--- a/vlog/vlog18.html
+++ b/vlog/vlog18.html
@@ -90,8 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gepgj66inhj31jm0u0x6r.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=158938&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss
-" type="video/mp4" />
+  <source src="https://sourl.cn/jicekk" type="video/mp4" />
   </object>
 </video>
 	  </center>   
