--- a/vlog/vlog19.html
+++ b/vlog/vlog19.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gepgeimbyej31jb0u04qr.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=158936&resourceType=ugc_video&editionType=default&source=aliyun&playUrlType=url_oss" type="video/mp4" />
+  <source src="https://sourl.cn/pXUtsD" type="video/mp4" />
   </object>
 </video>
 	  </center>   
