--- a/tools.html
+++ b/tools.html
@@ -113,6 +113,8 @@ var _hmt = _hmt || [];
 <p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/8ahhHS'>Win</a> <a href='https://sourl.cn/4ZZEGf'>Mac</a> </p>
 <p>Adobe Photoshop 2020 SP <a href='https://sourl.cn/968qEW'>Win</a> <a href='https://sourl.cn/p4fHhb'>Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/2dRCBf'>Win</a> <a href='https://sourl.cn/YQXbD3'>Mac</a> </p>
+<p>Adobe Premiere 2020 SP <a href='https://sourl.cn/QzKiDj'>Win</a> <a href='/tools'>Mac</a> </p>
+	
 <p><a href='https://rickywang.lanzous.com/ibrb79a'>amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
