--- a/blog.html
+++ b/blog.html
@@ -161,7 +161,7 @@ var _hmt = _hmt || [];
 </tr>
       
 <tr>
-    <td><a href="/posts/20200101-plog.html"><cite>R-Plog</cite></a></td>
+    <td><a href="https://mp.weixin.qq.com/s/BQ1RauvpWox2k3NH-X1EVA"><cite>R-Plog</cite></a></td>
     <td class="right"><time>2016-09-10</time></td>
 </tr>
     
