--- a/vlog/vlog10.html
+++ b/vlog/vlog10.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
 	
     <center>       
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7awhdbl4j31wo0u0u0y.jpg" controls="controls">
-  <source src="https://sourl.cn/hgYzYi" type="video/mp4" />
+  <source src="https://qiniu-xpc15.xpccdn.com/5f1901e393ba4.mp4" type="video/mp4" />
   </object>
 </video>
 	  </center>   
