--- a/vlog/vlog10.html
+++ b/vlog/vlog10.html
@@ -88,7 +88,10 @@ var _hmt = _hmt || [];
 	
 	
 	
-    <center>       
+    <center>    
+	    <video width="320" height="240" controls="controls" autoplay="autoplay">
+  <source src="https://sourl.cn/Gf6RhU" type="video/mp4" />
+		    
 <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7awhdbl4j31wo0u0u0y.jpg" controls="controls">
   <source src="https://qiniu-xpc15.xpccdn.com/5f1901e393ba4.mp4" type="video/mp4" />
   </object>
