--- a/vlog/vlog10.html
+++ b/vlog/vlog10.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 <center>    
 		    
      <video width="92%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge7awhdbl4j31wo0u0u0y.jpg" controls="controls">
-        <source src="https://sourl.cn/Gf6RhU" type="video/mp4" />
+        <source src="https://sourl.cn/hgYzYi" type="video/mp4" />
     </video>
 	
 </center>   
