--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">24 FPS</h1>
+        <h1 id="article-title">【4K 120FPS】SONY A7S3 官方样片——《入画》</h1>
         <br>
 <div>
 	
@@ -71,13 +71,13 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="95%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge63dg791rj31ke0u0x6q.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=188056&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+<video width="95%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1gh7momqf6xj31ur0u0gys.jpg" controls="controls">
+  <source src="https://sourl.cn/MeFB9V" type="video/mp4" />
   </object>
 </video>
 	  </center>   
     
-  <center>  24 Frames </center>   
+  <center> 【影视飓风】SONY A7S3 官方样片——《入画》 </center>   
             <br>
 	</br>
              
