--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
     
    
     
-<p>I am majored in Biotechnology, I will graduate from <a href='http://www.usts.edu.cn/'>Suzhou University of Science and Technology</a> .My research interests are bioinformatics and genetic engineering.</p>
+<p>I majored in Biotechnology, I will graduate from <a href='http://www.usts.edu.cn/'>Suzhou University of Science and Technology</a> .My research interests are bioinformatics and genetic engineering.</p>
 <p>I can manipulate computer proficiently and master Microsoft Office software, also be familiar with Origin、Photoshop,etc.</p>
 <p>In my spare time, I maintain a <a href='https://sourl.cn/xdtkdU'>WeChat Official Accounts</a> and a <a href='https://sourl.cn/YwsFHv'><strong>blog</strong></a> , <a href='https://sourl.cn/Jshsyn'>often  meditate</a> and <a href='https://sourl.cn/pELYdz'>make short films</a>.</p>
 <p>You can contact me through email <a href='mailto:wangrui.ts@qq.com'>wangrui.ts@qq.com</a>.</p>
