--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">【4K 120FPS】SONY A7S3 官方样片——《入画》</h1>
+        <h1 id="article-title">Mulan.2020</h1>
         <br>
 <div>
 	
@@ -78,7 +78,7 @@ var _hmt = _hmt || [];
 </video>
 	  </center>   
     
-  <center> 【影视飓风】SONY A7S3 官方样片——《入画》 </center>   
+  <center> Mulan.2020</center>   
             <br>
 	</br>
              
