--- a/tools.html
+++ b/tools.html
@@ -128,7 +128,8 @@ var _hmt = _hmt || [];
 <p>ClashX  <a href='https://rickywang.lanzous.com/ibsjm3i'>Config</a>  <a href='https://github.com/yichengchen/clashX/releases'>Github</a>- <a href='https://rickywang.lanzous.com/ibs40xg'>Mac</a>  <a href='https://github.com/Fndroid/clash_for_windows_pkg/releases'>Github</a> -<a href='https://rickywang.lanzous.com/ibs527i'>Win</a> <a href='https://vpn.bioricky.top'>Login</a></p>
  
 <p><a href='https://rickywang.lanzous.com/ic4vzxa'>V2rayNG.APK</a></p>	
-	
+	 
+<p><a href='https://sourl.cn/buhRWz'>Qv2ray</a></p>	
 	<p> </p>  
 	
 	
