--- a/vlog/vlog16.html
+++ b/vlog/vlog16.html
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
 	</br>
              
             
-  <iframe src="https://www.icloud.com.cn/sharedalbum/zh-cn/#B0QGY8gBY9l3yzC" width="92%">   
+  <iframe src="https://www.icloud.com.cn/sharedalbum/zh-cn/#B0QGY8gBY9l3yzC" width="92%"  security="restricted"sandbox="allow-scripts allow-same-origin allow-popups">   
 
                        <a href="https://www.icloud.com.cn/sharedalbum/zh-cn/#B0QGY8gBY9l3yzC">
 
