--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -33,60 +33,69 @@
 <div class="container">
 	<div class="content">
 		<div class="grid">
-			<div class="grid__item" data-size="1280x853"> <a href="images/weix/1.png" class="img-wrap"><img src="images/weix/1.png" alt="img1" />
+			
+			
+			<div class="grid__item" data-size="1280x853"> <a href="images/weix/1.jpg" class="img-wrap"><img src="images/weix/1.jpg" alt="img1" />
 				<div class="description description--grid">Assemblage</div>
 				</a> </div>
-			<div class="grid__item" data-size="958x1280"> <a href="images/weix/2.png" class="img-wrap"><img src="images/weix/2.png" alt="img2" />
+			<div class="grid__item" data-size="958x1280"> <a href="images/weix/2.jpg" class="img-wrap"><img src="images/weix/2.jpg" alt="img2" />
 				<div class="description description--grid">Demesne</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x853"> <a href="images/weix/3.png" class="img-wrap"><img src="images/weix/3.png" alt="img3" />
+			<div class="grid__item" data-size="1280x853"> <a href="images/weix/3.jpg" class="img-wrap"><img src="images/weix/3.jpg" alt="img3" />
 				<div class="description description--grid">Vestigial</div>
 				</a> </div>
-			<div class="grid__item" data-size="865x1280"> <a href="images/weix/4.png" class="img-wrap"><img src="images/weix/4.png" alt="img4" />
+			<div class="grid__item" data-size="865x1280"> <a href="images/weix/4.jpg" class="img-wrap"><img src="images/weix/4.jpg" alt="img4" />
 				<div class="description description--grid">Zephyr</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x1280"> <a href="images/weix/5.png" class="img-wrap"><img src="images/weix/5.png" alt="img5" />
+			<div class="grid__item" data-size="1280x1280"> <a href="images/weix/5.jpg" class="img-wrap"><img src="images/weix/5.jpg" alt="img5" />
 				<div class="description description--grid">Desideratum</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/6.png" class="img-wrap"><img src="images/weix/6.png" alt="img6" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/6.jpg" class="img-wrap"><img src="images/weix/6.jpg" alt="img6" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/7.png" class="img-wrap"><img src="images/weix/7.png" alt="img7" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/7.jpg" class="img-wrap"><img src="images/weix/7.jpg" alt="img7" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/8.png" class="img-wrap"><img src="images/weix/8.png" alt="img8" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/8.jpg" class="img-wrap"><img src="images/weix/8.jpg" alt="img8" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/9.png" class="img-wrap"><img src="images/weix/9.png" alt="img9" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/9.jpg" class="img-wrap"><img src="images/weix/9.jpg" alt="img9" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/1.png" class="img-wrap"><img src="images/weix/1.png" alt="img10" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/1.jpg" class="img-wrap"><img src="images/weix/1.jpg" alt="img10" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/2.png" class="img-wrap"><img src="images/weix/2.png" alt="img11" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/2.jpg" class="img-wrap"><img src="images/weix/2.jpg" alt="img11" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/3.png" class="img-wrap"><img src="images/weix/3.png" alt="img12" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/3.jpg" class="img-wrap"><img src="images/weix/3.jpg" alt="img12" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/4.png" class="img-wrap"><img src="images/weix/4.png" alt="img13" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/4.jpg" class="img-wrap"><img src="images/weix/4.jpg" alt="img13" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/5.png" class="img-wrap"><img src="images/weix/5.png" alt="img14" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/5.jpg" class="img-wrap"><img src="images/weix/5.jpg" alt="img14" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/6.png" class="img-wrap"><img src="images/weix/6.png" alt="img15" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/6.jpg" class="img-wrap"><img src="images/weix/6.jpg" alt="img15" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/7.png" class="img-wrap"><img src="images/weix/7.png" alt="img16" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/7.jpg" class="img-wrap"><img src="images/weix/7.jpg" alt="img16" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/8.png" class="img-wrap"><img src="images/weix/8.png" alt="img17" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/8.jpg" class="img-wrap"><img src="images/weix/8.jpg" alt="img17" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/weix/9.png" class="img-wrap"><img src="images/weix/9.png" alt="img18" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/weix/9.jpg" class="img-wrap"><img src="images/weix/9.jpg" alt="img18" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
+
+			
+			
+			
+			
+			
+			
 		</div>
 		<!-- /grid -->
 		<div class="preview">
